--- a/templates/posts_by_category.html
+++ b/templates/posts_by_category.html
@@ -1,83 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
-    <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
-    <title>Django Blog Application</title>
-    <link href="https://getbootstrap.com/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
-    <link href="{% static 'css/blog.css' %}" rel="stylesheet">
-</head>
-<body>
-
-    <div class="container">
-        <header class="blog-header py-3">
-            <div class="row flex-nowrap justify-content-between align-items-center">
-
-                <div class="col-8 pt-1">
-                    <a class="blog-header-logo text-dark" href="/">Django Blog</a>
-                </div>
-
-                <div class="col-4 d-flex justify-content-end align-items-center">
-                    <a class="btn btn-sm btn-warning me-2" href="#">Login</a>
-                    <a class="btn btn-sm btn-outline-secondary" href="#">Register</a>
-                </div>
-
-            </div>
-        </header>
-
-        <div class="overflow-auto py-1 mb-2">
-            <nav class="nav d-flex justify-content-between">
-                {% for categ in categories %}
-                    <a class="p-2 text-muted" href="#">{{ categ.category_name }}</a>
-                {% endfor %}
-            </nav>
-        </div>
-        
-        
-        
-        {% for post in featured_posts %}
-        {% if forloop.first %}
-        <div class="hero p-3 p-md-5 text-white rounded bg-dark" style="--bg-image: url('{{ post.featured_image.url }}');">
-            <div class="col-md-8 px-0">
-                <h1 class="display-4 fst-italic">{{ post.title }}</h1>
-                <p class="lead my-3">{{ post.short_description | truncatewords:15 }}</p>
-                <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
-            </div>
-        </div>
-        {% endif %}
-        {% endfor %}
-
-        <!-- Featured Post -->
-        <h3 class="text-uppercase text-warning mt-3" style="letter-spacing: 2px;">Category - {{ category }}</h3>
-
-        <div class="row mb-2">
-            {% if posts %}
-            {% for post in posts %}
-            <div class="col-md-6">
-                <div class="card border-0">
-                    <div class="card-body">
-                        <h3>{{ post.title }}</h3>
-                        <small class="mb-1 text-muted">{{ post.created_at | timesince }} ago | {{ post.author }}</small>
-                        <p class="card-text">{{ post.short_description | truncatewords:30 }}</p>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-            {% else %}
-            <div class="col-md-6">
-                No Posts Found
-            </div>
-            {% endif %}
-        </div>
-
+{% extends "base.html" %}
+{% block content %}
+{% for post in featured_posts %}
+{% if forloop.first %}
+<div class="hero p-3 p-md-5 text-white rounded bg-dark" style="--bg-image: url('{{ post.featured_image.url }}');">
+    <div class="col-md-8 px-0">
+        <h1 class="display-4 fst-italic">{{ post.title }}</h1>
+        <p class="lead my-3">{{ post.short_description | truncatewords:15 }}</p>
+        <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
     </div>
-    
-    <footer class="blog-footer">
-        <p>Django blog built with 💜 by <a href="#">Vignesh J</a></p>
-    </footer>   
-    
-</body>
-</html>
+</div>
+{% endif %}
+{% endfor %}
+
+<!-- Featured Post -->
+<h3 class="text-uppercase text-warning mt-3" style="letter-spacing: 2px;">Category - {{ category }}</h3>
+
+<div class="row mb-2">
+    {% if posts %}
+    {% for post in posts %}
+    <div class="col-md-6">
+        <div class="card border-0">
+            <div class="card-body">
+                <h3>{{ post.title }}</h3>
+                <small class="mb-1 text-muted">{{ post.created_at | timesince }} ago | {{ post.author }}</small>
+                <p class="card-text">{{ post.short_description | truncatewords:30 }}</p>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+    {% else %}
+    <div class="col-md-6">
+        No Posts Found
+    </div>
+    {% endif %}
+</div>
+
+{% endblock content %}
