--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,17 @@
         <header class="blog-header py-3">
             <div class="row flex-nowrap justify-content-between align-items-center">
 
-                <div class="col-8 pt-1">
+                <div class="col-4 pt-1">
                     <a class="blog-header-logo text-dark" href="/">Django Blog</a>
+                </div>
+
+                <div class="col-4 pt-1">
+                    <form action="{% url 'search' %}" method="GET">
+                        <div class="input-group">
+                            <input type="text" name="keyword" value="{{ keyword }}" class="form-control" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
+                            <button type="submit" class="btn btn-warning" id="button-search">Go!</button>
+                        </div>
+                    </form>
                 </div>
 
                 <div class="col-4 d-flex justify-content-end align-items-center">
@@ -43,7 +52,7 @@
     </div>
 
     <footer class="blog-footer">
-        <p>Django blog built with 💜 by <a href="#">Vignesh J</a></p>
+        <p>Django blog built with 💜 by <a href="https://vigneshdevj.pythonanywhere.com/" target="_blank" rel="noopener">Vignesh J</a></p>
     </footer>
 
 </body>
