--- a/templates/base.html
+++ b/templates/base.html
@@ -30,8 +30,18 @@
                 </div>
 
                 <div class="col-4 d-flex justify-content-end align-items-center">
-                    <a class="btn btn-sm btn-warning me-2" href="#">Sign In</a>
-                    <a class="btn btn-sm btn-outline-secondary" href="#">Sign Up</a>
+                    {% if not user.is_authenticated %}
+                    <a class="btn btn-sm btn-warning me-2" href="{% url 'login' %}">Sign In</a>
+                    <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Sign Up</a>
+                    {% else %}
+                    <span class="me-2">You are logged in as <h6  class="d-inline">{{ user.username }}</h6></span>
+                    <form action="{% url 'logout' %}" method="POST" class="d-inline">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-outline-danger btn-sm">
+                            Logout
+                        </button>
+                    </form>
+                    {% endif %}
                 </div>
 
             </div>
