--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
     <title>Django Blog Application</title>
     <link href="https://getbootstrap.com/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
     <link href="{% static 'css/blog.css' %}" rel="stylesheet">
 </head>
@@ -55,9 +56,25 @@
             </nav>
         </div>
 
+        <!-- Django Messages to show for Login with invalid credentials -->
+         {% if messages %}
+            <div class="mt-3">
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button"
+                            class="btn-close"
+                            data-bs-dismiss="alert"
+                            aria-label="Close">
+                        </button>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+
         <!-- Main Content -->
         {% block content %}
-           
+            
         {% endblock content %}
     </div>
 
@@ -65,5 +82,6 @@
         <p>Django blog built with 💜 by <a href="https://vigneshdevj.pythonanywhere.com/" target="_blank" rel="noopener">Vignesh J</a></p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
