--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,11 @@
 
 <form action="{% url 'login' %}" method="POST" style="width:500px; margin:auto;">
     {% csrf_token %}
-    {{ form | crispy }}
-    <button type="submit" class="btn btn-warning">Login</button>
+
+    {% for field in form %}
+        {{ field|as_crispy_field }}
+    {% endfor %}
+
+    <button type="submit" class="btn btn-warning mb-3">Login</button>
 </form>
 {% endblock %}
