--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
     <form action="{% url 'register' %}" method="POST" style="width:500px; margin:auto;">
         {% csrf_token %}
         {{ form | crispy }}
-        <button type="submit" class="btn btn-warning">Submit</button>
+        <button type="submit" class="btn btn-warning mb-3">Submit</button>
     </form>
 
 {% endblock content %}
