--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,10 @@
                     <a class="btn btn-sm btn-warning me-2" href="{% url 'login' %}">Sign In</a>
                     <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Sign Up</a>
                     {% else %}
-                    <span class="me-2">You are logged in as <h6  class="d-inline">{{ user.username }}</h6></span>
+                    <!-- <span class="me-2">You are logged in as <h6  class="d-inline">{{ user.username }}</h6></span> -->
+                    
+                    <span class="me-3"><a href="{% url 'dashboard' %}">Dashboard</a></span>
+
                     <form action="{% url 'logout' %}" method="POST" class="d-inline">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-outline-danger btn-sm">
