--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -2,4 +2,41 @@
 
 {% block content %}
   
+    <div class="container">
+        <div class="row">
+            <!-- Left Sidebar -->
+             <div class="col-md-3">
+                <div class="nav flex-column nav-pills bg-light" aria-orientation="vertical">
+                    <a href="" class="nav-link text-dark">Dashboard</a>
+                    <a href="" class="nav-link text-dark">Categories</a>
+                    <a href="" class="nav-link text-dark">Blogs</a>
+                    <a href="" class="nav-link text-dark">Logout</a>
+                </div>
+             </div>
+
+            <!-- Right Sidebar -->
+             <div class="col-md-9">
+                <div class="row">
+                    <div class="col">
+                        <div class="card border mb-3">
+                            <div class="card-header text-center text-uppercase fw-bold">All Categories</div>
+                            <div class="card-body text-dark">
+                                <h5 class="card-title text-center">10</h5>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card border mb-3">
+                            <div class="card-header text-center text-uppercase fw-bold">All Posts</div>
+                            <div class="card-body text-dark">
+                                <h5 class="card-title text-center">15</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+             </div>
+        </div>
+    </div>
+
 {% endblock content %}
