--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -21,7 +21,7 @@
                         <div class="card border mb-3">
                             <div class="card-header text-center text-uppercase fw-bold">All Categories</div>
                             <div class="card-body text-dark">
-                                <h5 class="card-title text-center">10</h5>
+                                <h5 class="card-title text-center">{{ category_count }}</h5>
                             </div>
                         </div>
                     </div>
@@ -30,7 +30,7 @@
                         <div class="card border mb-3">
                             <div class="card-header text-center text-uppercase fw-bold">All Posts</div>
                             <div class="card-body text-dark">
-                                <h5 class="card-title text-center">15</h5>
+                                <h5 class="card-title text-center">{{ blogs_count }}</h5>
                             </div>
                         </div>
                     </div>
