--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -5,14 +5,8 @@
     <div class="container">
         <div class="row">
             <!-- Left Sidebar -->
-             <div class="col-md-3">
-                <div class="nav flex-column nav-pills bg-light" aria-orientation="vertical">
-                    <a href="" class="nav-link text-dark">Dashboard</a>
-                    <a href="" class="nav-link text-dark">Categories</a>
-                    <a href="" class="nav-link text-dark">Blogs</a>
-                    <a href="" class="nav-link text-dark">Logout</a>
-                </div>
-             </div>
+            
+            {% include "dashboard/sidebar.html" %}
 
             <!-- Right Sidebar -->
              <div class="col-md-9">
