feat: add category in dashboard

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -10,6 +10,7 @@
 
             <!-- Right Sidebar -->
              <div class="col-md-9">
+                <span class="me-3">Logged in as <strong>{{ user.username }}</strong></span>
                 <div class="row">
                     <div class="col">
                         <div class="card border mb-3">
