--- a/templates/dashboard/categories.html
+++ b/templates/dashboard/categories.html
@@ -9,8 +9,42 @@
             {% include "dashboard/sidebar.html" %}
 
             <!-- Right Sidebar -->
-             <div class="col-md-9">
-                
+            <div class="col-md-9">
+                <h2>All Categories</h2>
+                <div class="d-flex justify-content-end mb-2">
+                <a href="{% url 'add_category' %}" class="btn btn-dark">
+                    Add New
+                </a>
+            </div>
+
+
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Category Name</th>
+                            <th>Created At</th>
+                            <th>Updated At</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        {% for cat in categories %}
+                            <tr>
+                                <td>{{ forloop.counter }}</td>
+                                <td>{{ cat }}</td>
+                                <td>{{ cat.created_at }}</td>
+                                <td>{{ cat.updated_at }}</td>
+                                <td>
+                                    <a href="#" class="me-2"><i class="fa fa-edit text-success"></i></a>
+                                    
+                                    <a href=""><i class="fa fa-trash text-danger"></i></a>
+                                </td>
+                            </tr>
+                        {% endfor %}    
+                    </tbody>
+                </table>
              </div>
         </div>
     </div>
