--- a/templates/dashboard/sidebar.html
+++ b/templates/dashboard/sidebar.html
@@ -2,7 +2,13 @@
     <div class="nav flex-column nav-pills bg-light" aria-orientation="vertical">
         <a href="{% url 'dashboard' %}" class="nav-link text-dark {% if '/dashboard/' == request.path %}bg-warning{% endif %}">Dashboard</a>
         <a href="{% url 'categories' %}" class="nav-link text-dark {% if '/categories/' in request.path %}bg-warning{% endif %}">Categories</a>
-        <a href="" class="nav-link text-dark">Posts Test</a>
-        <a href="" class="nav-link text-dark">Logout</a>
+        <a href="{% url 'posts' %}" class="nav-link text-dark {% if '/posts/' in request.path %}bg-warning{% endif %}">Posts Test</a>
+        <form action="{% url 'logout' %}" method="POST">
+            {% csrf_token %}
+            <button type="submit" class="nav-link text-dark btn btn-link w-100 text-start">
+                Logout
+            </button>
+        </form>
+
     </div>
 </div>
