--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -9,7 +9,7 @@
                 <header class="mb-4">
                     <h1 class="fw-bolder mb-1">{{ single_blog.title }}</h1>
                     <div class="text-muted fst-italic mb-2">Posted on {{ single_blog.created_at | timesince }} by {{ single_blog.author }}</div>
-                    <a class="badge bg-warning text-decoration-none text-light" href="#">{{ single_blog.category }}</a>
+                    <span class="badge bg-warning text-decoration-none text-light" href="#">{{ single_blog.category }}</span>
                 </header>
                 
                 <figure class="mb-4"><img class="img-fluid rounded" src="{{ single_blog.featured_image.url }}" alt="..." /></figure>
@@ -17,6 +17,40 @@
                 <section class="mb-5">
                     <p class="fs-5 mb-4">{{ single_blog.short_description }}</p>
                     <p class="fs-5 mb-4">{{ single_blog.blog_body }}</p>
+
+                    <!-- Comments -->
+                    <h4>Comments ({{ comment_count }})</h4>
+                    {% if comments %}
+                        {% for comment in comments %}
+                            <div class="card mt-1">
+                                <div class="card-body">
+                                    <p class="card-text mb-0">{{ comment }}</p>
+                                    <span>
+                                        <small>By {{ comment.user }}</small>
+                                        <small>| {{ comment.created_at | timesince }} ago</small>
+                                    </span>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                    No comments yet.
+                    {% endif %}
+                    <br>
+
+                    <div class="form-group">
+
+                        {% if user.is_authenticated %}
+                        <form action="" method="POST">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <textarea name="comment" class="form-control" placeholder="Write your comment"></textarea>
+                                <input type="submit" value="Submit" class="btn btn-primary mt-2">
+                            </div>
+                        </form>
+                        {% else %}
+                        <p>Please <span><a href="{% url 'login' %}">login</a></span> to write a comment!</p>
+                        {% endif %}
+                    </div>
                 </section>
             </article>
         </div>
