--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,17 @@
 <form action="{% url 'login' %}" method="POST" style="width:500px; margin:auto;">
     {% csrf_token %}
 
+    {% if form.non_field_errors %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{ form.non_field_errors }}
+             <button type="button"
+                class="btn-close"
+                data-bs-dismiss="alert"
+                aria-label="Close">
+            </button>
+        </div>
+    {% endif %}
+
     {% for field in form %}
         {{ field|as_crispy_field }}
     {% endfor %}
