--- a/templates/search.html
+++ b/templates/search.html
@@ -2,7 +2,12 @@
 
 {% block content %}
 
-<h3 class="text-warning" style="letter-spacing: 2px;">Search Term - {{ keyword }}</h3>
+{% if keyword %}
+<h3 class="text-warning" style="letter-spacing: 2px;">
+    Search Results for "{{ keyword }}"
+</h3>
+{% endif %}
+
 <div class="row mb-2">
     {% if blogs %}
     
@@ -17,9 +22,6 @@
         </div>
     </div>
     {% endfor %}
-
-    {% else %}
-    <p>No posts found</p>
 
     {% endif %}
   
